build base request

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion '25.0.2'
-
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.baseapp.hiepnn.mybaseproject"
         minSdkVersion 16
@@ -49,4 +49,5 @@ dependencies {
         exclude module: 'httpclient'
     }
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5'
+    compile 'com.loopj.android:android-async-http:1.4.6'
 }
