--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.baseapp.hiepnn.mybaseproject"
-        minSdkVersion 16
+        minSdkVersion 14
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -35,23 +35,23 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.android.support:appcompat-v7:28.0.0'
-    compile 'com.android.support:design:28.0.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'de.greenrobot:eventbus:2.4.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'de.greenrobot:eventbus:2.4.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile('org.apache.httpcomponents:httpmime:4.3.6') {
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation('org.apache.httpcomponents:httpmime:4.3.6') {
         exclude module: 'httpclient'
     }
-    compile 'org.apache.httpcomponents:httpclient-android:4.3.5'
-    compile 'com.loopj.android:android-async-http:1.4.6'
-    compile 'com.akexorcist:localizationactivity:1.1.2'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    implementation 'org.apache.httpcomponents:httpclient-android:4.3.5'
+    implementation 'com.loopj.android:android-async-http:1.4.6'
+    implementation 'com.akexorcist:localizationactivity:1.1.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
 }
