--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /.gradle/4.6/taskHistory/taskHistory.bin
 /.gradle/4.6/taskHistory/taskHistory.lock
 /.gradle/4.6/javaCompile/taskJars.bin
+app/src/main/res/.DS_Store
